Fixed home menubar and  molecules layout issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
 }
 
 
@@ -83,7 +83,7 @@ button:focus-visible {
   } */
 }
 .p-menubar{
-  padding: 20px; 
+  padding: 0px; 
   position: fixed;         
   top: 0;                 
   left: 0;
