--- a/frontend/src/pages/styles/Home.css
+++ b/frontend/src/pages/styles/Home.css
@@ -14,7 +14,7 @@
   gap: 10px;
   background-color: #F0F8FF;
   padding: 10px;
-  height: 70vh;
+  height: 80vh;
   flex: 1 1 0;
   min-height: 0;
 }
@@ -24,9 +24,10 @@
   text-align: center;
   padding: 10px;
   font-size: 30px;
-    display: flex;
-  align-items: center;     /* centra verticalmente */
-  justify-content: center; /* centra orizzontalmente */
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  border-radius: 3%;
 }
 
 .item1 {
